initial spinner & home page styles edited

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -5,7 +5,10 @@
       <p>Деловые предложения о сотрудничестве</p>
       <h1>Поможем найти партнёра по бизнесу</h1>
       <p>Разместите Ваше предложение на BizMate сегодня — и уже завтра Вы сможете найти надежного партнера по бизнесу в любом регионе.</p>
-      <button class="button-primary button-primary-large" [routerLink]="['/new-offer']">Создать оффер</button>
+      <div>
+        <button class="button-primary button-primary-large" [routerLink]="['/new-offer']">Создать оффер</button>
+        <button class="button-primary button-white button-primary-large" [routerLink]="['/offers-page']">Найти офферы</button>
+      </div>
     </div>
 
     <div class="image-block"></div>
