--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -19,8 +19,8 @@
 
     h1 {
       font-family: Raleway-SemiBold;
-      font-size: 63px;
-      line-height: 75px;
+      font-size: 58px;
+      line-height: 72px;
       margin: 0;
     }
 
@@ -30,6 +30,10 @@
       min-width: 350px;
       line-height: 23px;
       margin-bottom: 2em;
+    }
+
+    div > button:nth-of-type(1) {
+      margin-right: 2.5em;
     }
   }
 
@@ -61,16 +65,26 @@
       z-index: 0;
 
       h1 {
-        font-size: 48px;
-        line-height: 52px;
+        font-size: 42px;
+        line-height: 42px;
         margin-top: 15px;
       }
 
       p:nth-of-type(2) {
-        margin: 1em auto;
+        margin: 2.5em auto;
         width: 100%;
         min-width: unset;
         max-width: 400px;
+      }
+
+      div {
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      div > button:nth-of-type(1) {
+        margin-right: 0;
       }
     }
 
@@ -91,6 +105,10 @@
     display: table;
     font-size: 16px;
     margin: 2.5em auto 4em;
+  }
+
+  @media screen and (max-width: 770px) {
+    margin-top: 4em;
   }
 }
 
