--- a/src/styles.scss
+++ b/src/styles.scss
@@ -178,6 +178,10 @@ label.mat-form-field-label > span {
 
 .button-primary-large {
   padding: 20px 25px;
+
+  @media screen and (max-width: 770px) {
+    padding: 15px;
+  }
 }
 
 *:focus {
