--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -106,10 +106,6 @@
     font-size: 16px;
     margin: 2.5em auto 4em;
   }
-
-  @media screen and (max-width: 770px) {
-    margin-top: 4em;
-  }
 }
 
 .offer-types-section {
@@ -184,6 +180,7 @@
   @media screen and (max-width: 770px) {
     width: 100%;
     padding: 0 0;
+    margin: 6em auto;
 
     h2 {
       font-size: 24px;
