--- a/src/app/pages/offers-page/offers-page.component.html
+++ b/src/app/pages/offers-page/offers-page.component.html
@@ -2,7 +2,7 @@
 
   <div class="highlight-box search-form-panel">
     <div (click)="isSearchFormVisible = !isSearchFormVisible">
-      <h3>Поиск офферов</h3>
+      <h3>Поиск по фильтрам</h3>
       <button class="button-primary button-circle">
         <img src="/assets/img/icons/bold_arrow.svg" alt="Скрыть/Показать меню"
              [class.transform-arrow]="isSearchFormVisible"/>
