--- a/src/app/pages/offers-page/offers-page.component.scss
+++ b/src/app/pages/offers-page/offers-page.component.scss
@@ -14,10 +14,12 @@
 
     button {
       display: none;
+      width: 30px;
+      height: 30px;
 
       img {
         vertical-align: middle;
-        width: 20px;
+        width: 17px;
       }
     }
 
