--- a/src/styles.scss
+++ b/src/styles.scss
@@ -225,6 +225,7 @@ label.mat-form-field-label > span {
 
   h1 {
     text-align: center;
+    font-size: 20px;
     color: $main-theme-color;
     margin-bottom: 0;
   }
