--- a/src/app/dialogs/login/login.component.html
+++ b/src/app/dialogs/login/login.component.html
@@ -1,11 +1,11 @@
-<h1 mat-dialog-title>Вход</h1>
+<h1>Вход</h1>
 
 <p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
 
 <a class="non-border-link-button google-login" (click)="loginGoogle()">Вход через&nbsp;&nbsp;
   <img src="/assets/img/socials/google_logo.svg" alt="Google"></a>
 
-<div mat-dialog-content [formGroup]="loginFormGroup">
+<form [formGroup]="loginFormGroup">
   <mat-form-field appearance="legacy">
     <mat-label>E-mail</mat-label>
     <input matInput formControlName="login">
@@ -20,10 +20,10 @@
       <img src="/assets/img/icons/visibility_eye.svg" [style.opacity]="hidePassword ? .3 : 1" />
     </button>
   </mat-form-field>
-</div>
 
-<div mat-dialog-actions class="full-width-action-buttons">
-  <a class="non-border-link-button" [mat-dialog-close] (click)="forgotPassword()">Забыл пароль</a>
-  <a class="non-border-link-button sign-up-link" [mat-dialog-close] (click)="signUp()">Еще нет профиля?&nbsp;Создать</a>
-  <button class="button-primary" (click)="logIn()">Войти</button>
-</div>
+  <div mat-dialog-actions class="full-width-action-buttons">
+    <a class="non-border-link-button" (click)="forgotPassword()">Забыл пароль</a>
+    <a class="non-border-link-button sign-up-link" (click)="signUp()">Еще нет профиля?&nbsp;Создать</a>
+    <button class="button-primary" (click)="logIn()">Войти</button>
+  </div>
+</form>
