images-block layout on mobile edited

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -326,7 +326,7 @@ label.mat-form-field-label > span {
   }
 
   @media screen and (max-width: 770px) {
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 }
 
