--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -7,7 +7,7 @@
       <p>Разместите Ваше предложение на BizMate сегодня — и уже завтра Вы сможете найти надежного партнера по бизнесу в любом регионе.</p>
       <div>
         <button class="button-primary button-primary-large" [routerLink]="['/new-offer']">Создать оффер</button>
-        <button class="button-primary button-white button-primary-large" [routerLink]="['/offers-page']">Найти офферы</button>
+        <button class="button-primary button-white button-primary-large" [routerLink]="['/offers-page']">Найти оффер</button>
       </div>
     </div>
 
