--- a/src/app/dialogs/login/login.component.html
+++ b/src/app/dialogs/login/login.component.html
@@ -5,7 +5,7 @@
 <a class="non-border-link-button google-login" (click)="loginGoogle()">Вход через&nbsp;&nbsp;
   <img src="/assets/img/socials/google_logo.svg" alt="Google"></a>
 
-<form [formGroup]="loginFormGroup">
+<form [formGroup]="loginFormGroup" (keydown.enter)="$event.preventDefault()">
   <mat-form-field appearance="legacy">
     <mat-label>E-mail</mat-label>
     <input matInput formControlName="login">
@@ -14,7 +14,7 @@
 
   <mat-form-field appearance="legacy">
     <mat-label>Пароль</mat-label>
-    <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" (keypress)="onKeyPress($event)">
+    <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password">
     <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Скрыть пароль'"
             [attr.aria-pressed]="hidePassword">
       <img src="/assets/img/icons/visibility_eye.svg" [style.opacity]="hidePassword ? .3 : 1" />
