--- a/src/app/dialogs/new-offers-subscription/new-offers-subscription.component.html
+++ b/src/app/dialogs/new-offers-subscription/new-offers-subscription.component.html
@@ -2,7 +2,7 @@
 <div>
   <p>Получайте уведомления на электронную почту о размещении новых офферов, которые могут быть Вам интересны.</p>
 
-  <form [formGroup]="newOffersSubscriptionForm">
+  <form [formGroup]="newOffersSubscriptionForm" (keydown.enter)="$event.preventDefault()">
     <div class="subscription-form-block">
       <mat-form-field appearance="legacy">
         <mat-label>E-mail</mat-label>
