--- a/src/app/pages/offer-page/offer-page.component.html
+++ b/src/app/pages/offer-page/offer-page.component.html
@@ -85,7 +85,7 @@
       </div>
 
       <div class="comments-block">
-        <h3>Комментарии ({{commentsCount}})</h3>
+        <h3>Комментарии</h3>
 
         <article class="comment highlight-box" *ngFor="let comment of offerComments$ | async">
           <div class="name-date">
