--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -53,19 +53,20 @@
       <h2>Мои офферы</h2>
       <button class="button-primary" [routerLink]="'/new-offer'">Создать оффер</button>
     </div>
-    <div class="offers-list" *ngIf="hasOffers">
-      <ng-container *ngIf="!userOffers$">
-        <app-offer-card-skeleton></app-offer-card-skeleton>
-        <app-offer-card-skeleton></app-offer-card-skeleton>
-      </ng-container>
-      <app-offer-card *ngFor="let offer of userOffers$ | async" [offer]="offer" [editable]="true"></app-offer-card>
-    </div>
-    <ng-container *ngIf="!hasOffers">
-      <div class="no-offers-block">
+    <ng-container *ngIf="userOffers$ | async as offers; else loading">
+      <div *ngIf="offers.length === 0" class="no-offers-block">
         <p>Размещенных офферов нет</p>
         <button class="button-primary button-primary-large" [routerLink]="'/new-offer'">Создать оффер</button>
       </div>
+      <div *ngIf="offers.length > 0" class="offers-list">
+        <app-offer-card *ngFor="let offer of offers" [offer]="offer" [editable]="true"></app-offer-card>
+      </div>
     </ng-container>
+    <ng-template #loading>
+      <div class="offers-list">
+        <app-offer-card-skeleton *ngFor="let number of [0,1]"></app-offer-card-skeleton>
+      </div>
+    </ng-template>
   </section>
 
 </main>
