--- a/src/app/pages/offer-form/offer-form.component.scss
+++ b/src/app/pages/offer-form/offer-form.component.scss
@@ -86,7 +86,7 @@ $main-theme-color: #2E7990;
       right: 5px;
       width: 15px;
       height: 15px;
-      z-index: 100;
+      z-index: 2147483647;
       background-color: white;
       border-radius: 50%;
     }
