--- a/src/app/template-blocks/footer/footer.component.html
+++ b/src/app/template-blocks/footer/footer.component.html
@@ -7,7 +7,7 @@
   <div class="footer-container">
     <div class="footer_logo_and_copyright">
       <img src="/assets/img/biz_mate/logo_footer.svg" alt="Логотип подвала" />
-      <p>BizMate &copy; 2020</p>
+      <p>BizMate &copy; {{getCurrentYearString()}}</p>
     </div>
 
     <div class="nav-buttons">
