--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -48,7 +48,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top right;
-    z-index: 0;
+    z-index: unset;
   }
 
   @media screen and (max-width: 770px) {
@@ -63,7 +63,7 @@
       min-width: unset;
       max-width: 400px;
       text-align: center;
-      z-index: 0;
+      z-index: unset;
 
       h1 {
         font-size: 42px;
