--- a/src/app/pages/offers-page/offers-page.component.html
+++ b/src/app/pages/offers-page/offers-page.component.html
@@ -1,15 +1,11 @@
 <main>
 
   <div class="highlight-box search-form-panel">
-    <div (click)="isSearchFormVisible = !isSearchFormVisible">
+    <div>
       <h3>Поиск по фильтрам</h3>
-      <button class="button-primary button-circle">
-        <img src="/assets/img/icons/bold_arrow.svg" alt="Скрыть/Показать меню"
-             [class.transform-arrow]="isSearchFormVisible"/>
-      </button>
     </div>
     <!-- Desktop form -->
-    <form class="desktop-menu" [formGroup]="searchForm" (keydown.enter)="$event.preventDefault()">
+    <form [formGroup]="searchForm" (keydown.enter)="$event.preventDefault()">
       <ng-container *ngIf="!isTouchDevice">
         <mat-form-field>
           <input type="text" placeholder="Тип объявления" aria-label="Тип объявления" matInput
@@ -63,64 +59,12 @@
         <button class="button-primary" (click)="applyFilter(false)">Искать</button>
       </div>
     </form>
-
-    <!-- Mobile form -->
-    <form *ngIf="isSearchFormVisible" class="mobile-menu" [formGroup]="searchForm" (keydown.enter)="$event.preventDefault()">
-      <ng-container *ngIf="!isTouchDevice">
-        <mat-form-field>
-          <input type="text" placeholder="Тип объявления" aria-label="Тип объявления" matInput
-                 formControlName="type" [matAutocomplete]="offerType">
-          <mat-autocomplete #offerType="matAutocomplete">
-            <mat-option *ngFor="let type of filteredOfferTypes$ | async" [value]="type.title">
-              {{type.title}}
-            </mat-option>
-          </mat-autocomplete>
-        </mat-form-field>
-
-        <mat-form-field>
-          <input type="text" placeholder="Сфера бизнеса" aria-label="Сфера бизнеса" matInput
-                 formControlName="businessArea" [matAutocomplete]="businessArea">
-          <mat-autocomplete #businessArea="matAutocomplete">
-            <mat-option *ngFor="let category of filteredBusinessArea$ | async" [value]="category.name">
-              {{category.name}}
-            </mat-option>
-          </mat-autocomplete>
-        </mat-form-field>
-      </ng-container>
-
-      <ng-container *ngIf="isTouchDevice">
-        <mat-form-field appearance="fill">
-          <mat-label>Тип объявления</mat-label>
-          <mat-select formControlName="type">
-            <mat-option *ngFor="let type of getOfferTypes()" [value]="type.title">{{type.title}}</mat-option>
-          </mat-select>
-        </mat-form-field>
-
-        <mat-form-field appearance="fill">
-          <mat-label>Сфера бизнеса</mat-label>
-          <mat-select formControlName="businessArea">
-            <mat-option *ngFor="let type of getBusinessAreas()" [value]="type.name">{{type.name}}</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </ng-container>
-
-      <mat-form-field [ngClass]="{'mobile-cities-field': isTouchDevice}">
-        <input type="text" placeholder="Населенный пункт" aria-label="Населенный пункт" matInput
-               formControlName="city" [matAutocomplete]="cities">
-        <mat-autocomplete #cities="matAutocomplete">
-          <mat-option *ngFor="let city of filteredCities$ | async" [value]="city.name">
-            {{city.name}}
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
-
-      <div>
-        <button class="button-primary button-white" (click)="clearFilterForm()">Сбросить</button>
-        <button class="button-primary" (click)="applyFilter()">Искать</button>
-      </div>
-    </form>
-
   </div>
+
+  <div class="button-primary mobile-filter-panel-buttons" (click)="openMobileFilterDialog()">
+    Фильтр{{getTextForMobileFilterButton()}}
+  </div>
+
 
   <div *ngIf="!emptyFilterResult" class="offers-list">
     <app-offer-card *ngFor="let offer of (filteredOffers$ ? filteredOffers$ : sortedOffers$) | async" [offer]="offer"
