--- a/src/app/template-blocks/offer-card/offer-card.component.scss
+++ b/src/app/template-blocks/offer-card/offer-card.component.scss
@@ -59,6 +59,8 @@
     }
 
     @media screen and (max-width: 770px) {
+      position: unset;
+
       .avatar-container {
         position: initial;
       }
