Text in mobile filters dialog button changed

--- a/src/app/pages/offers-page/offers-page.component.html
+++ b/src/app/pages/offers-page/offers-page.component.html
@@ -62,7 +62,7 @@
   </div>
 
   <div class="button-primary mobile-filter-panel-buttons" (click)="openMobileFilterDialog()">
-    Фильтр{{getTextForMobileFilterButton()}}
+    Параметры{{getTextForMobileFilterButton()}}
   </div>
 
 
