--- a/src/app/template-blocks/image-cropper/custom-image-cropper.component.html
+++ b/src/app/template-blocks/image-cropper/custom-image-cropper.component.html
@@ -2,14 +2,17 @@
 
 <p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
 
+<!-- This input is for "Change image" button -->
 <input #_fileInput type="file" (change)="fileChangeEvent($event)" accept=".jpg, .jpeg, .png" hidden>
 
 <div *ngIf="!isLoaded" class="upload-file-text-block">
+  <!-- This input is for drag and drop -->
+  <input type="file" (change)="fileChangeEvent($event)" accept=".jpg, .jpeg, .png">
   <span><a (click)="_fileInput.click()">Загрузите</a> или перетащите изображение</span>
 </div>
 
-<image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true" [aspectRatio]="1" [cropperMinWidth]="40"
-               [roundCropper]="true" [autoCrop]="false" (imageCropped)="imageCropped($event)" [format]="'png'"
+<image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true" [aspectRatio]="1" [cropperMinWidth]="60"
+               [roundCropper]="true" [autoCrop]="false" (imageCropped)="imageCropped($event)" [format]="'png'" [imageQuality]="80"
                (imageLoaded)="imageLoaded()" (loadImageFailed)="loadImageFailed()">
 </image-cropper>
 
